# pytest-balance

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pytest_balance/: __init__.py  __main__.py  _fmt.py  cli.py  plugin.py  report.py
src/pytest_balance/algorithms/: lpt.py  partitioner.py
src/pytest_balance/ci/: detect.py  splitter.py
src/pytest_balance/store/: merger.py  models.py  reader.py  writer.py
src/pytest_balance/xdist/: hooks.py  scheduler.py
tests/: conftest.py  test_cli.py  test_fmt.py  test_plugin.py  test_report.py
tests/test_algorithms/: test_lpt.py  test_partitioner.py
tests/test_ci/: test_detect.py  test_splitter.py
tests/test_store/: test_merger.py  test_models.py  test_reader.py  test_writer.py
tests/test_xdist/: _simulator.py  test_scheduler.py  test_scheduler_stateful.py
